# ai-genai-llm-caching

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
config/: settings.yaml
src/: __init__.py  api.py  config_loader.py  exceptions.py  llm_cache_service.py  logger_setup.py
src/cache/: __init__.py  cache_manager.py  memory_cache.py  sqlite_cache.py
src/llm/: __init__.py  llm_client.py  mock_client.py  openai_client.py
src/models/: __init__.py  cache_entry.py  llm_request.py  llm_response.py
src/similarity/: __init__.py  semantic_similarity.py  similarity_engine.py  syntactic_similarity.py
tests/: __init__.py  test_cache_manager.py  test_llm_cache_service.py  test_memory_cache.py  test_mock_client.py  test_semantic_similarity.py  test_syntactic_similarity.py
